# tree-sitter-mal

./: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: publish.yml
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: detector.ts-test
test/highlight/: coreLang_Networking.mal  special.mal
